--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- Header -->
             <header>
                 <h4>Now playing:</h4>
-                <h2>String 57th & 9th</h2>
+                <marquee>String 57th & 9th</marquee>
             </header>
 
             <!-- CD -->
@@ -29,6 +29,8 @@
                     style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg')">
                 </div>
             </div>
+
+            <input type="range" id="progress" class="progress" value="0" step="1" min="0" max="100">
 
             <!-- Control -->
             <div class="control">
@@ -49,6 +51,7 @@
                     <i class="fas fa-random"></i>
                 </div>
             </div>
+            
             <!-- Volume Adjustment -->
             <div class="volume">
                 <div class="btn btn-volume">
@@ -59,8 +62,6 @@
                         step="1" />
                 </div>
             </div>
-            <input type="range" id="progress" class="progress" value="0" step="1" min="0" max="100">
-
 
             <audio id="audio" src=""></audio>
         </div>
