--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/Logo.png"  type="image/x-icon">
 </head>
 
 <body>
